# LRU_cache_simulator

./: CMakeLists.txt  cyclic_test.c  main.c  sawtooth_test.c  simulator.c  simulator.h  simulator_MRU.c  simulator_MRU.h
LRU/: simulator.c  simulator.h
MRU/: MRUSplay.c  MRUSplay.h  simulator.c  simulator.h
